--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,13 +3,13 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++ build active file",
-            "command": "/usr/bin/g++",
+            "command": "/bin/g++",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}",
+                "main.cpp",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}",
+                "main",
                 "-lGL",
                 "-lGLU",
                 "-lglut"
